--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="yes" name="X-UA-Compatible">
   <meta content="yes" name="apple-mobile-web-app-capable">
   <title>Twitch Streams!</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/twitch/css/styles.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     </header>
     <div id="stream-list" class="section"></div>
   </div>
-  <script src="/bundle.js"></script>
+  <script src="/twitch/bundle.js"></script>
 </body>
 
 </html>
